@@ -290,6 +290,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17241) The diffonly URI parameter should cascade to "Next edit" and "Previous edit" diff links
 * (bug 16823) 'Sidebar search form should not use Special:Search view URL as target'
 * (bug 16343) Non-existing, but in use, category pages can be "go" match hits
+* (bug 18031) Make namespace selector on Special:Export remember the previous 
+  selection
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
